ci: optimize workflow for faster builds
Performance optimizations:
- Combine Gradle tasks (8→4 invocations) to reduce JVM startup overhead
- Remove --no-daemon flag to leverage Gradle daemon between steps
- Remove redundant shadowJar step (e2eTest builds it via task dependency)
- Remove redundant ./gradlew --version validation step
- Use shallow clone (fetch-depth: 1) for PRs, deep clone for main (SonarCloud)
- Skip E2E tests on macOS (platform-independent LSP protocol tests)

Runner configuration:
- Switch default from self-hosted to cloud runners (ubuntu-latest)
- Configurable via: workflow_dispatch input > CI_RUNNER_LABEL repo var > default
- PR builds: ubuntu-latest, Java 17 (fast feedback)
- Main builds: ubuntu-latest + macos-latest, Java 17 + 21 (comprehensive)
- Self-hosted override available via repo variable or manual dispatch

Cache improvements:
- cache-overwrite-existing only for self-hosted runners
- Smart cache-read-only for fork PRs (prevents cache poisoning)

Other:
- Reduced timeout from 120 to 30 minutes
- Fixed test_log_level default from debug to default
- Clear documentation block for runner configuration

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,9 +13,9 @@ on:
         required: false
         type: choice
         options:
-          - 'self-hosted'
           - 'cloud'
-        default: 'self-hosted'
+          - 'self-hosted'
+        default: 'cloud'
       disable_scan:
         description: Disable Gradle build scan
         required: false
@@ -29,14 +29,30 @@ on:
           - 'default'
           - 'info'
           - 'debug'
-        default: 'debug'  # TODO: Revert to 'default' after initial debugging phase
+        default: 'default'
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
+
+# ============================================================================
+# RUNNER CONFIGURATION
+# ============================================================================
+# Priority: workflow_dispatch input > CI_RUNNER_LABEL repo variable > ubuntu-latest
+#
+# To switch ALL jobs to self-hosted permanently:
+#   Settings → Secrets and variables → Actions → Variables → New repository variable
+#   Name: CI_RUNNER_LABEL  Value: self-hosted
+#
+# To switch for a single run:
+#   Actions → CI → Run workflow → runner_label: self-hosted
+#
+# Default (no variable set): ubuntu-latest (GitHub-hosted cloud runner)
+# ============================================================================
+
 jobs:
   build:
     name: Build and Test
-    timeout-minutes: 120
+    timeout-minutes: 30
     runs-on: ${{ matrix.os }}
     permissions:
       checks: write
@@ -44,24 +60,19 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # FIXME: Temporary self-hosted-only matrix for PR/main
-        # Original runner matrix (keep for quick rollback):
-        # os: ${{ fromJSON( (github.event.inputs.runner_label == 'self-hosted' || vars.CI_RUNNER_LABEL == 'self-hosted') && '["self-hosted"]' || (github.event_name == 'pull_request' && '["ubuntu-latest"]' || '["ubuntu-latest", "macos-latest"]') ) }}
-        # java: ${{ fromJSON( (github.event.inputs.runner_label == 'self-hosted' || vars.CI_RUNNER_LABEL == 'self-hosted') && '[17]' || (github.event_name == 'pull_request' && '[17]' || '[17, 21]') ) }}
-        # exclude:
-        #   - os: macos-latest
-        #     java: 21
-        #   - os: self-hosted
-        #     java: 21
-        os:
-          - self-hosted
-        java:
-          - 17
+        # Self-hosted: single runner, Java 17 only
+        # Cloud: ubuntu for PRs, multi-platform+multi-java for main pushes
+        os: ${{ fromJSON( (github.event.inputs.runner_label == 'self-hosted' || vars.CI_RUNNER_LABEL == 'self-hosted') && '["self-hosted"]' || (github.event_name == 'pull_request' && '["ubuntu-latest"]' || '["ubuntu-latest", "macos-latest"]') ) }}
+        java: ${{ fromJSON( (github.event.inputs.runner_label == 'self-hosted' || vars.CI_RUNNER_LABEL == 'self-hosted') && '[17]' || (github.event_name == 'pull_request' && '[17]' || '[17, 21]') ) }}
+        exclude:
+          - os: macos-latest
+            java: 21
     steps:
       - name: Checkout code
         uses: actions/checkout@v6
         with:
-          fetch-depth: 0
+          # Shallow clone for PRs (faster), deep clone for main (SonarCloud needs history)
+          fetch-depth: ${{ github.event_name == 'pull_request' && 1 || 0 }}
       - name: Set up JDK ${{ matrix.java }}
         uses: actions/setup-java@v5
         with:
@@ -73,6 +84,8 @@ jobs:
           # Allow writing to cache for main OR PRs from the same repository
           # Read-only for forks to prevent cache poisoning
           cache-read-only: ${{ github.ref != 'refs/heads/main' && (github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name != github.repository) }}
+          # Self-hosted runners may have pre-existing Gradle User Home - allow overwrite
+          cache-overwrite-existing: ${{ matrix.os == 'self-hosted' }}
       - name: Set Gradle flags
         shell: bash
         run: |-
@@ -95,32 +108,30 @@ jobs:
               echo "TEST_LOG_FLAG=" >> $GITHUB_ENV
               ;;
           esac
-      - name: Validate Gradle Wrapper
-        run: ./gradlew --no-daemon --version
       
-      - name: Compile Kotlin
-        run: ./gradlew --no-daemon compileKotlin compileTestKotlin --stacktrace $GRADLE_SCAN_FLAG
-        
-      - name: Run Quality Checks
-        run: ./gradlew --no-daemon lint --stacktrace $GRADLE_SCAN_FLAG
+      # Phase 1: Compile + Lint in single invocation (Gradle parallelizes internally)
+      - name: Compile and Lint
+        run: ./gradlew classes testClasses lint --parallel --build-cache --stacktrace $GRADLE_SCAN_FLAG
 
-      - name: Run Unit Tests
+      # Phase 2: Unit Tests + Coverage (coverage depends on test execution data)
+      - name: Run Unit Tests with Coverage
         timeout-minutes: 20
-        run: ./gradlew --no-daemon test --stacktrace $TEST_LOG_FLAG $GRADLE_SCAN_FLAG
+        run: ./gradlew test koverXmlReport koverHtmlReport --parallel --build-cache --stacktrace $TEST_LOG_FLAG $GRADLE_SCAN_FLAG
 
+      # Phase 3: E2E Tests (automatically builds shadowJar via task dependency)
+      # Skip on macOS - E2E tests are platform-independent LSP protocol tests
       - name: Run E2E Tests
+        if: matrix.os != 'macos-latest'
         timeout-minutes: 30
-        run: ./gradlew --no-daemon :tests:e2eTest --stacktrace $TEST_LOG_FLAG $GRADLE_SCAN_FLAG
+        run: ./gradlew :tests:e2eTest --build-cache --stacktrace $TEST_LOG_FLAG $GRADLE_SCAN_FLAG
 
-      - name: Run Code Coverage
-        run: ./gradlew --no-daemon koverHtmlReport koverXmlReport --stacktrace $GRADLE_SCAN_FLAG
-      
+      # Phase 4: SonarCloud (needs coverage reports from Phase 2)
       - name: SonarCloud Analysis
         if: (matrix.os == 'ubuntu-latest' || matrix.os == 'self-hosted') && matrix.java == 17 && ((github.event_name == 'push' && github.ref == 'refs/heads/main') || (github.event_name == 'pull_request' && github.event.pull_request.base.ref == 'main' && github.event.pull_request.head.repo.full_name == github.repository))
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./gradlew --no-daemon sonar --info $GRADLE_SCAN_FLAG
+        run: ./gradlew sonar --info $GRADLE_SCAN_FLAG
         
       - name: Generate Test Report
         uses: dorny/test-reporter@v2
@@ -130,11 +141,7 @@ jobs:
           path: '**/build/test-results/test/*.xml'
           reporter: java-junit
           
-      # Heavy tasks (ShadowJar) run on main OR the specific job that creates the artifact (Ubuntu/Java17)
-      - name: Build Shadow JAR
-        if: (matrix.os == 'ubuntu-latest' && matrix.java == 17) || matrix.os == 'self-hosted'
-        run: ./gradlew --no-daemon shadowJar --stacktrace $GRADLE_SCAN_FLAG
-        
+      # Verify JAR (already built by e2eTest via shadowJar dependency)
       - name: Verify JAR
         if: (matrix.os == 'ubuntu-latest' && matrix.java == 17) || matrix.os == 'self-hosted'
         run: |-
@@ -162,9 +169,7 @@ jobs:
           retention-days: 7
   validate:
     name: Validation Check
-    # FIXME: Temporary; original runs-on preserved below
-    # runs-on: ubuntu-latest
-    runs-on: self-hosted
+    runs-on: ${{ github.event.inputs.runner_label == 'self-hosted' && 'self-hosted' || vars.CI_RUNNER_LABEL == 'self-hosted' && 'self-hosted' || 'ubuntu-latest' }}
     needs: build
     if: always()
     steps:
@@ -177,9 +182,7 @@ jobs:
           echo "✅ All checks passed!"
   dependency-check:
     name: Check Dependencies
-    # FIXME: Temporary; original runs-on preserved below
-    # runs-on: ubuntu-latest
-    runs-on: self-hosted
+    runs-on: ${{ github.event.inputs.runner_label == 'self-hosted' && 'self-hosted' || vars.CI_RUNNER_LABEL == 'self-hosted' && 'self-hosted' || 'ubuntu-latest' }}
     if: github.ref == 'refs/heads/main'
     steps:
       - name: Checkout code
@@ -192,4 +195,4 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v5
       - name: Check for dependency updates
-        run: ./gradlew --no-daemon dependencyUpdates --refresh-dependencies || true
+        run: ./gradlew dependencyUpdates --refresh-dependencies || true
