--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ concurrency:
 jobs:
   build:
     name: Build and Test
-    timeout-minutes: 30
+    timeout-minutes: 45
     runs-on: ${{ matrix.os }}
     permissions:
       checks: write
@@ -83,7 +83,7 @@ jobs:
         with:
           # Allow writing to cache for main OR PRs from the same repository
           # Read-only for forks to prevent cache poisoning
-          cache-read-only: ${{ github.ref != 'refs/heads/main' && (github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name != github.repository) }}
+          cache-read-only: ${{ github.ref != 'refs/heads/main' && github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name != github.repository }}
           # Self-hosted runners may have pre-existing Gradle User Home - allow overwrite
           cache-overwrite-existing: ${{ matrix.os == 'self-hosted' }}
       - name: Set Gradle flags
@@ -109,7 +109,7 @@ jobs:
               ;;
           esac
       
-      # Phase 1: Compile + Lint in single invocation (Gradle parallelizes internally)
+      # Phase 1: Compile + Lint in single invocation with parallel execution
       - name: Compile and Lint
         run: ./gradlew classes testClasses lint --parallel --build-cache --stacktrace $GRADLE_SCAN_FLAG
 
@@ -123,7 +123,7 @@ jobs:
       - name: Run E2E Tests
         if: matrix.os != 'macos-latest'
         timeout-minutes: 30
-        run: ./gradlew :tests:e2eTest --build-cache --stacktrace $TEST_LOG_FLAG $GRADLE_SCAN_FLAG
+        run: ./gradlew :tests:e2eTest --parallel --build-cache --stacktrace $TEST_LOG_FLAG $GRADLE_SCAN_FLAG
 
       # Phase 4: SonarCloud (needs coverage reports from Phase 2)
       - name: SonarCloud Analysis
