--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ concurrency:
 # ============================================================================
 # RUNNER CONFIGURATION
 # ============================================================================
-# Priority: workflow_dispatch input > CI_RUNNER_LABEL repo variable > ubuntu-latest
+# Priority: workflow_dispatch input > CI_RUNNER_LABEL repo variable > macos-15
 #
 # To switch ALL jobs to self-hosted permanently:
 #   Settings → Secrets and variables → Actions → Variables → New repository variable
@@ -46,7 +46,12 @@ concurrency:
 # To switch for a single run:
 #   Actions → CI → Run workflow → runner_label: self-hosted
 #
-# Default (no variable set): ubuntu-latest (GitHub-hosted cloud runner)
+# Default (no variable set): macos-15 (GitHub-hosted Arm64 runner)
+#
+# NOTE: Avoiding ubuntu-latest due to stability issues causing builds to hang.
+# See: https://github.com/actions/runner-images/issues/13182
+#
+# Available runner labels: https://github.com/actions/runner-images#available-images
 # ============================================================================
 
 jobs:
@@ -61,11 +66,13 @@ jobs:
       fail-fast: false
       matrix:
         # Self-hosted: single runner, Java 17 only
-        # Cloud: ubuntu for PRs, multi-platform+multi-java for main pushes
-        os: ${{ fromJSON( (github.event.inputs.runner_label == 'self-hosted' || vars.CI_RUNNER_LABEL == 'self-hosted') && '["self-hosted"]' || (github.event_name == 'pull_request' && '["ubuntu-latest"]' || '["ubuntu-latest", "macos-latest"]') ) }}
+        # Cloud: macos-15 for PRs (stable Arm64), multi-platform for main pushes
+        # NOTE: Using macos-15 instead of ubuntu-latest due to runner stability issues
+        # See: https://github.com/actions/runner-images/issues/13182
+        os: ${{ fromJSON( (github.event.inputs.runner_label == 'self-hosted' || vars.CI_RUNNER_LABEL == 'self-hosted') && '["self-hosted"]' || (github.event_name == 'pull_request' && '["macos-15"]' || '["macos-15", "ubuntu-24.04"]') ) }}
         java: ${{ fromJSON( (github.event.inputs.runner_label == 'self-hosted' || vars.CI_RUNNER_LABEL == 'self-hosted') && '[17]' || (github.event_name == 'pull_request' && '[17]' || '[17, 21]') ) }}
         exclude:
-          - os: macos-latest
+          - os: ubuntu-24.04
             java: 21
     steps:
       - name: Checkout code
@@ -132,13 +139,13 @@ jobs:
       # Phase 4: E2E Tests (automatically builds shadowJar via task dependency)
       # Skip on macOS - E2E tests are platform-independent LSP protocol tests
       - name: Run E2E Tests
-        if: matrix.os != 'macos-latest'
+        if: matrix.os != 'macos-15'
         timeout-minutes: 30
         run: ./gradlew :tests:e2eTest --parallel --build-cache --stacktrace $TEST_LOG_FLAG $GRADLE_SCAN_FLAG
 
       # Phase 5: SonarCloud (needs coverage reports from Phase 3)
       - name: SonarCloud Analysis
-        if: (matrix.os == 'ubuntu-latest' || matrix.os == 'self-hosted') && matrix.java == 17 && ((github.event_name == 'push' && github.ref == 'refs/heads/main') || (github.event_name == 'pull_request' && github.event.pull_request.base.ref == 'main' && github.event.pull_request.head.repo.full_name == github.repository))
+        if: (matrix.os == 'ubuntu-24.04' || matrix.os == 'self-hosted') && matrix.java == 17 && ((github.event_name == 'push' && github.ref == 'refs/heads/main') || (github.event_name == 'pull_request' && github.event.pull_request.base.ref == 'main' && github.event.pull_request.head.repo.full_name == github.repository))
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
