--- a/editors/code/package.json
+++ b/editors/code/package.json
@@ -333,6 +333,7 @@
     "chai": "^6.2.1",
     "esbuild": "^0.27.0",
     "eslint": "^9.13.0",
+    "fast-check": "^4.4.0",
     "mocha": "^11.7.5",
     "npm-run-all2": "^8.0.0",
     "prettier": "^3.7.3",
