feat(update): wire UpdateChecker into VS Code (PR C) (#63)
* feat(update): wire UpdateChecker into VS Code (PR C)

- Add groovy.checkForUpdates command
- Add settings: checkOnStartup, checkIntervalHours, notifications
- Create GitHubReleaseProvider for fetching from GitHub API
- Create UpdateService to orchestrate checks with scheduling
- Initialize update service on extension activation
- Export new types from update module

* refactor(update): address PR review comments

- Use context.extension.packageJSON.version instead of hardcoded constant
- Extract action strings to constants in showUpdateAvailable()

--- a/editors/code/package.json
+++ b/editors/code/package.json
@@ -39,6 +39,10 @@
         "title": "Groovy: Show Language Server Version"
       },
       {
+        "command": "groovy.checkForUpdates",
+        "title": "Groovy: Check for Language Server Updates"
+      },
+      {
         "command": "groovy.gradle.build",
         "title": "Gradle: Build"
       },
@@ -297,6 +301,32 @@
           "type": "boolean",
           "default": true,
           "description": "Include Groovy LSP built-in default Jenkins plugins (recommended)"
+        },
+        "groovy.update.checkOnStartup": {
+          "type": "boolean",
+          "default": true,
+          "description": "Check for Language Server updates when the extension is activated"
+        },
+        "groovy.update.checkIntervalHours": {
+          "type": "number",
+          "default": 24,
+          "minimum": 1,
+          "description": "Hours between automatic update checks (minimum: 1)"
+        },
+        "groovy.update.notifications": {
+          "type": "string",
+          "enum": [
+            "off",
+            "onlyWhenOutdated",
+            "always"
+          ],
+          "default": "onlyWhenOutdated",
+          "enumDescriptions": [
+            "Disable update notifications",
+            "Show notification only when a new version is available",
+            "Always show notification after checking for updates"
+          ],
+          "description": "When to show update notifications"
         }
       }
     }
