feat(semantics): add semantic token scopes for Jenkins syntax (#66)
- Add semanticTokenScopes for macro (pipeline blocks) and decorator (wrapper blocks)
- Enable semantic highlighting by default for jenkinsfile and groovy languages
- Maps LSP token types to TextMate scopes for theme compatibility

--- a/editors/code/package.json
+++ b/editors/code/package.json
@@ -151,6 +151,38 @@
         "path": "./syntaxes/groovy.tmLanguage.json"
       }
     ],
+    "semanticTokenScopes": [
+      {
+        "language": "jenkinsfile",
+        "scopes": {
+          "macro": [
+            "entity.name.tag.pipeline.jenkins"
+          ],
+          "decorator": [
+            "entity.name.function.decorator.jenkins"
+          ]
+        }
+      },
+      {
+        "language": "groovy",
+        "scopes": {
+          "macro": [
+            "entity.name.tag.pipeline.jenkins"
+          ],
+          "decorator": [
+            "entity.name.function.decorator.jenkins"
+          ]
+        }
+      }
+    ],
+    "configurationDefaults": {
+      "[jenkinsfile]": {
+        "editor.semanticHighlighting.enabled": true
+      },
+      "[groovy]": {
+        "editor.semanticHighlighting.enabled": true
+      }
+    },
     "configuration": {
       "title": "Groovy Language Server",
       "properties": {
