fix: remove duplicate prepare-server call in package script (#68)
The package script was calling prepare-server, then vsce package.
But vsce package triggers vscode:prepublish, which also calls prepare-server.
This caused the LSP to be downloaded twice.

Fix: Remove prepare-server from package script since vscode:prepublish handles it.

--- a/editors/code/package.json
+++ b/editors/code/package.json
@@ -377,7 +377,7 @@
     "lint": "eslint client/src/**/*.ts",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "package": "npm run prepare-server && vsce package",
+    "package": "vsce package",
     "install-extension": "node tools/install-extension.js",
     "clean": "rm -rf client/out/ server/*.jar server/.groovy-lsp-version",
     "postinstall": "cd client && npm install && cd .. && npm run prepare-server",
