refactor(ci): consolidate runner API logic into runner-status action
BREAKING: Renamed wait-for-runner to runner-status with mode support

New modes:
- check: Single check, returns has_runners boolean (for pre-destroy check)
- wait-online: Poll until runner is online (for provisioning)
- verify-absent: Verify runners removed after destroy (warns, never fails)

Benefits:
- Single source of truth for GitHub Runners API calls
- Consistent error handling and logging patterns
- ~100 lines of duplicated code eliminated
- Easier to maintain (update API version in one place)

Updated workflows:
- runner-provision.yml: Uses mode: wait-online
- runner-destroy.yml: Uses mode: check and mode: verify-absent

--- a/.github/workflows/runner-provision.yml
+++ b/.github/workflows/runner-provision.yml
@@ -100,8 +100,9 @@ jobs:
 
       - name: Wait for Magalu runner to be online
         id: wait
-        uses: ./.github/actions/wait-for-runner
+        uses: ./.github/actions/runner-status
         with:
+          mode: wait-online
           label: magalu
           github-token: ${{ secrets.GH_PAT_RUNNER }}
           max-wait-minutes: '10'
