--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,8 +59,31 @@ concurrency:
 # ============================================================================
 
 jobs:
+  check-paths:
+    runs-on: ubuntu-latest
+    outputs:
+      run_main_ci: ${{ steps.filter.outputs.run_main_ci }}
+    steps:
+      - uses: dorny/paths-filter@de90cc6fb38fc0963ad72b210f1f284cd68cea36 # v3.0.2
+        id: filter
+        with:
+          filters: |
+            run_main_ci:
+              - 'src/**'
+              - 'gradle/**'
+              - '*.gradle'
+              - '*.gradle.kts'
+              - 'gradle.properties'
+              - '.github/workflows/ci.yml'
+              - '!infra/**'
+              - '!*.md'
+              - '!docs/**'
+              - '!.github/workflows/runner-infra.yml'
+
   build:
     name: Build and Test
+    needs: check-paths
+    if: needs.check-paths.outputs.run_main_ci == 'true' || github.event_name == 'workflow_dispatch'
     timeout-minutes: 45
     runs-on: ${{ matrix.os }}
     permissions:
@@ -80,17 +103,17 @@ jobs:
             java: 21
     steps:
       - name: Checkout code
-        uses: actions/checkout@v6
+        uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6
         with:
           # Shallow clone for PRs (faster), deep clone for main (SonarCloud needs history)
           fetch-depth: ${{ github.event_name == 'pull_request' && 1 || 0 }}
       - name: Set up JDK ${{ matrix.java }}
-        uses: actions/setup-java@v5
+        uses: actions/setup-java@f2beeb24e141e01a676f977032f5a29d81c9e27e # v5.1.0
         with:
           distribution: temurin
           java-version: ${{ matrix.java }}
       - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v5
+        uses: gradle/actions/setup-gradle@4d9f0ba0025fe599b4ebab900eb7f3a1d93ef4c2 # v5.0.0
         with:
           # Allow writing to cache for main OR PRs from the same repository
           # Read-only for forks to prevent cache poisoning
@@ -156,7 +179,7 @@ jobs:
         run: ./gradlew sonar --info $GRADLE_SCAN_FLAG
         
       - name: Generate Test Report
-        uses: dorny/test-reporter@v2
+        uses: dorny/test-reporter@fe45e9537387dac839af0d33ba56eed8e24189e8 # v2.0.0
         if: success() || failure()
         with:
           name: Test Results (${{ matrix.os }} - Java ${{ matrix.java }})
@@ -172,7 +195,7 @@ jobs:
           
       - name: Upload JAR artifact
         if: (matrix.os == 'ubuntu-latest' && matrix.java == 17) || matrix.os == 'self-hosted'
-        uses: actions/upload-artifact@v6
+        uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6.0.0
         with:
           name: groovy-lsp-jar-${{ matrix.os }}-java${{ matrix.java }}
           path: groovy-lsp/build/libs/groovy-lsp-*-all.jar
@@ -180,7 +203,7 @@ jobs:
           
       - name: Upload Test Results
         if: always()
-        uses: actions/upload-artifact@v6
+        uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6.0.0
         with:
           name: test-results-${{ matrix.os }}-java${{ matrix.java }}
           path: |-
@@ -208,13 +231,13 @@ jobs:
     if: github.ref == 'refs/heads/main'
     steps:
       - name: Checkout code
-        uses: actions/checkout@v6
+        uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6
       - name: Set up JDK 17
-        uses: actions/setup-java@v5
+        uses: actions/setup-java@f2beeb24e141e01a676f977032f5a29d81c9e27e # v5.1.0
         with:
           distribution: temurin
           java-version: 17
       - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v5
+        uses: gradle/actions/setup-gradle@4d9f0ba0025fe599b4ebab900eb7f3a1d93ef4c2 # v5.0.0
       - name: Check for dependency updates
         run: ./gradlew dependencyUpdates --refresh-dependencies || true
