feat(infra): enhance runner infrastructure with auto-cleanup and better specs
- Upgrade default machine type to BV4-16-10 (4 vCPU, 16GB RAM)

- Fix runner_count and machine_type propagation to Terraform

- Add runner-cleanup.yml workflow (runs every 2h, checks PR activity)

- Add check-runner job to CI for auto-provisioning support

--- a/.github/workflows/runner-provision.yml
+++ b/.github/workflows/runner-provision.yml
@@ -13,17 +13,29 @@ on:
   workflow_dispatch:
     inputs:
       runner_count:
-        description: "Number of runners to provision"
+        description: 'Number of runners to provision'
         required: false
-        default: "1"
+        default: '1'
         type: string
+      machine_type:
+        description: 'Magalu Cloud VM type (BV1-4-10, BV2-8-10, BV4-16-10, BV8-32-10)'
+        required: false
+        default: 'BV4-16-10'
+        type: choice
+        options:
+          - 'BV1-4-10'
+          - 'BV2-8-10'
+          - 'BV4-16-10'
+          - 'BV8-32-10'
 
 env:
-  TF_CLOUD_ORGANIZATION: "alberto"
-  TF_WORKSPACE: "groovy-lsp-runner"
+  TF_CLOUD_ORGANIZATION: 'alberto'
+  TF_WORKSPACE: 'groovy-lsp-runner'
   TF_TOKEN_app_terraform_io: ${{ secrets.TF_API_TOKEN }}
   TF_VAR_github_token: ${{ secrets.GH_PAT_RUNNER }}
   TF_VAR_mgc_api_key: ${{ secrets.MGC_API_KEY }}
+  TF_VAR_runner_count: ${{ github.event.inputs.runner_count || '1' }}
+  TF_VAR_machine_type: ${{ github.event.inputs.machine_type || 'BV4-16-10' }}
 
 jobs:
   plan:
