chore: increase MaxMetaspaceSize to 1g
Prevents Gradle daemon metaspace exhaustion during CI builds

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # Gradle properties
 # JVM args optimized for BV4-16-10 runner (4 vCPU, 16GB RAM)
-org.gradle.jvmargs=-Xms2g -Xmx6g -XX:+UseG1GC -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xms2g -Xmx6g -XX:+UseG1GC -XX:MaxMetaspaceSize=1g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.configuration-cache=true
