feat(infra): prune offline runners before destroying
This change adds a new mode 'prune-offline' to the runner-status action and integrates it into the runner-destroy workflow. This ensures that offline runners are removed from GitHub registration before the infrastructure is destroyed, preventing dangling runner entries.

--- a/.github/actions/runner-status/action.yml
+++ b/.github/actions/runner-status/action.yml
@@ -9,6 +9,7 @@ inputs:
         - check: Single check, returns has_runners boolean and runner_count
         - wait-online: Poll until a runner with label is online (fails on timeout)
         - verify-absent: Check that no runners with label exist (warns but succeeds)
+        - prune-offline: Delete offline runners with the specified label
     required: true
   label:
     description: 'Runner label to check/wait for'
